<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.breezer.NewPrescriptionActivity$PlaceholderFragment" >

    <TextView
        
		android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/prescriptionName"/>
        
     <TextView
         
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/prescriptionFrequency"/>
        
      <TextView
          
          
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/prescriptionSize"/>
        
      <TextView
          
          
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/prescritionColor"/>
        
   	<TextView
              
              
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/prescriptionAmount"/>
        
    <TextView
        
        
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/prescriptionStartdate"/>
        
   	<TextView
          
          
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/prescriptionRemaining"/>


    

</RelativeLayout>
