<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/symptomsbg"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.breezer.SymptomsActivity$PlaceholderFragment" >
    
    <TextView
        android:id="@+id/addSymptomsTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:clickable="true"
        android:onClick="moveToAdd_Symptom"
        android:text="@string/add_symptoms"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/editSymptomsTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/viewSymptomsTitle"
        android:layout_below="@+id/viewSymptomsTitle"
        android:layout_marginTop="16dp"
        android:clickable="true"
        android:onClick="moveToEdit_Symptoms"
        android:text="@string/edit_symptom"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/viewSymptomsTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/addSymptomsTitle"
        android:layout_below="@+id/addSymptomsTitle"
        android:layout_marginTop="54dp"
        android:clickable="true"
        android:onClick="moveToSymptoms_Log"
        android:text="@string/view_symptoms"
        android:textSize="16sp" />

</RelativeLayout>
