<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal" >

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/medtimescreenbg" />

    <TextView
        android:id="@+id/symptomsTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/prescriptionTitle"
        android:layout_centerHorizontal="true"
        android:clickable="true"
        android:onClick="moveToSymptoms"
        android:text="@string/symptoms"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/prescriptionTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/symptomsTitle"
        android:layout_alignParentTop="true"
        android:layout_marginTop="106dp"
        android:clickable="true"
        android:onClick="moveToPrescription"
        android:text="@string/prescription"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/optionsTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="18dp"
        android:layout_toRightOf="@+id/prescriptionTitle"
        android:clickable="true"
        android:onClick="moveToOptions"
        android:text="@string/options"
        android:textSize="16sp" />

    <ImageButton
        android:id="@+id/imageButton2"
        android:layout_width="600dip"
        android:layout_height="290dip"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:background="@drawable/medtimemymedbutton"
        android:clickable="true"
        android:onClick="moveToPrescription"
        android:text="@string/prescription" />

    <ImageButton
        android:id="@+id/imageButton1"
        android:layout_width="600dip"
        android:layout_height="290dip"
        android:layout_alignBottom="@+id/optionsTitle"
        android:layout_alignParentLeft="true"
        android:background="@drawable/medtimesymptomsbutton" 
        android:clickable="true"
        android:onClick="moveToSymptoms"
        android:text="@string/symptoms"/>

</RelativeLayout>